--- a/Parciales HF/footer.html
+++ b/Parciales HF/footer.html
@@ -4,9 +4,9 @@
         <h2 class="footer-logo">Mavi <span>Insurance</span></h2>
 
         <div class="footer-social">
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://wa.me/17863487699"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/maviinsurance/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61571614533844"><i class="fab fa-facebook-f"></i></a>
         </div>
 
         <div class="footer-columns">
@@ -32,8 +32,8 @@
                 <p>+1 (930) 234-9660 (Ai)</p>
                 <h5>Reserva y Chat Ai</h5>
                 <div class="chat-icons">
-                    <a href="#"><i class="fas fa-sync-alt"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <!--<a href="#"><i class="fas fa-sync-alt"></i></a>-->
+                    <a href="https://wa.me/17863487699"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
