--- a/html/principal/asesores.html
+++ b/html/principal/asesores.html
@@ -27,13 +27,13 @@
       <div class="contenido">
         <div class="bio">
           <h3>“Tu bienestar, nuestra prioridad.”</h3>
-          <p>Con más de 7 años de experiencia en asesoría de seguros de salud, Maria William acompaña a nuestros clientes a
+          <p>Con más de 5 años de experiencia en asesoría de seguros de salud, Maria William acompaña a nuestros clientes a
             encontrar la mejor protección con un enfoque humano y empático. Está comprometida en brindar tranquilidad y
             soluciones reales.</p>
         </div>
         <div class="perfil">
           <p><strong>Ubicada en:</strong> USA, Illinos</p>
-          <p><strong>Edad:</strong> 31 años</p>
+          <p><strong>Edad:</strong> 26 años</p>
           <div class="redes">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
@@ -47,13 +47,13 @@
         <img src="/images/nosotros-asesores/Vicente Morillo.jpg" alt="Asesor 2">
         <div class="datos">
           <h2>Vicente Morillo</h2>
-          <h4>Especialista en hospitalizaciones</h4>
+          <h4>Asesor de servicios</h4>
         </div>
       </div>
       <div class="contenido">
         <div class="bio">
           <h3>“Protege lo que más valoras.”</h3>
-          <p>Vicente es experto en seguros para los seguros de hospitalizaciones. Su atención personalizada y su enfoque técnico lo
+          <p>Vicente es experto en seguros de hospitalizaciones. Su atención personalizada y su enfoque técnico lo
             convierten en uno de los asesores más confiables. Siempre está dispuesto a ayudarte a elegir la mejor
             cobertura.</p>
         </div>
