--- a/html/principal/nosotros.html
+++ b/html/principal/nosotros.html
@@ -66,8 +66,8 @@
                 <h3>Maria William</h3>
                 <p>Asesora de salud</p>
                 <div class="redes-aliado">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <!--<a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>-->
                 </div>
             </div>
 
@@ -78,8 +78,8 @@
                 <h3>Vicente Morillo</h3>
                 <p>Asesor de servicios</p>
                 <div class="redes-aliado">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <!--<a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>-->
                 </div>
             </div>
         </div>
