--- a/Parciales HF/header.html
+++ b/Parciales HF/header.html
@@ -11,9 +11,9 @@
         <a href="/html/segundario/soporte.html">Soporte</a>
     </div>
     <div class="top-right">
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://wa.me/17863487699"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/maviinsurance/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61571614533844"><i class="fab fa-facebook-f"></i></a>
         
         
     </div>
