--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 reales.
             </p>
             <div class="botones">
-                <a href="#contacto" class="btn primario">HABLAR CON UN ASESOR</a>
+                <a href="/html/principal/contacto.html" class="btn primario">HABLAR CON UN ASESOR</a>
                 <a href="#" class="btn secundario">DESCARGAR INFORMACIÓN</a>
             </div>
         </div>
