--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
             <div class="botones">
                 <a href="/html/principal/contacto.html" class="btn primario">HABLAR CON UN ASESOR</a>
-                <a href="#" class="btn secundario">DESCARGAR INFORMACIÓN</a>
+                <!--<a href="#" class="btn secundario">DESCARGAR INFORMACIÓN</a>-->
             </div>
         </div>
     </div>
