--- a/Parciales HF/footer.html
+++ b/Parciales HF/footer.html
@@ -30,7 +30,7 @@
                 <h4>Contacto</h4>
                 <p>+1 (786) 348-7699</p>
                 <!--<p>+1 (930) 234-9660 (Ai)</p>-->
-                <h5>Reserva y Chat Ai</h5>
+                <h5>Reserva<!-- y Chat Ai--></h5>
                 <div class="chat-icons">
                     <!--<a href="#"><i class="fas fa-sync-alt"></i></a>-->
                     <a href="https://wa.me/17863487699"><i class="fab fa-whatsapp"></i></a>
