--- a/html/principal/contacto.html
+++ b/html/principal/contacto.html
@@ -48,7 +48,8 @@
 
     <div class="chat-preview">
       <div class="chat-header">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Mavi Logo">
+        <img src="/images/favi-icon/faviicon.png" alt="Mavi Logo">
+        <!---<img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Mavi Logo">-->
         <div class="chat-info">
           <span class="chat-title">Mavi Insurance</span>
           <span class="chat-num" id="chat-num-preview"></span>
