--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
             <!-- Tarjeta 1 -->
             <div class="card">
                 <img src="images/index-estadistica/reloj.png" alt="Icono experiencia">
-                <h3>12+</h3>
+                <h3>+5</h3>
                 <p>Años de experiencia</p>
             </div>
 
             <!-- Tarjeta 2 -->
             <div class="card">
                 <img src="images/index-estadistica/licencia.png" alt="Icono licencia">
-                <h3>10+</h3>
-                <p>Licencia muchos estados</p>
+                <h3>Licencias</h3>
+                <p>En diferentes estados</p>
             </div>
 
             <!-- Tarjeta 3 -->
