Actualizacion 4.0 WebOnline Foto Vicente

--- a/html/principal/nosotros.html
+++ b/html/principal/nosotros.html
@@ -73,7 +73,7 @@
 
             <div class="tarjeta-aliado">
                 <div class="imagen-aliado">
-                    <img src="/images/nosotros-asesores/Vicente Morillo.jpg" alt="Aliado 2">
+                    <img src="/images/nosotros-asesores/vicente morillo.jpg" alt="Aliado 2">
                 </div>
                 <h3>Vicente Morillo</h3>
                 <p>Asesor de servicios</p>
